front/src/style.css
@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy');
@import url('https://fonts.googleapis.com/css?family=Open+Sans');

html, body {
	padding: 0;
	margin: 0;
	background-color: #202020;
	height: 100%;
	font-family: 'Open Sans', sans-serif;
	color: #fff;
}

body > div {
	height: 100%;
	display: flex;
	flex-direction: column;
}

.store {
	flex: 1;
	display: grid;
	grid-auto-columns: 1fr;
	grid-auto-rows: 1fr;
	grid-auto-flow: column;
	grid-template-rows: 1fr 1fr;
	grid-template-columns: repeat(5, 1fr);
	column-gap: 16px;
	row-gap: 16px;
	padding-top: 16px;
	padding-bottom: 16px;
}

.featured-panel {
	display: block;
	overflow: hidden;
	grid-row: 1 / 3;
	position: relative;
}

@media (max-aspect-ratio: 1/1) {
	.store {
		grid-template-rows: repeat(4, 1fr);
		grid-template-columns: 1fr 1fr;
		grid-auto-flow: row;
	}

	.featured-panel {
		grid-row: 1;
	}
}

.featured-item {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
}

.featured-image {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	background-position: center;
	background-repeat: no-repeat;
}

.display-asset {
	background-size: cover;
}

.icon-asset {
	background-size: contain;
}

.featured-item .title, .daily-item .title {
	font-family: 'Luckiest Guy', sans-serif;
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	height: 64px;
	text-align: center;
	color: #ffffff;
	padding: 6px;
	background-color: rgba(0, 0, 0, 0.2);
	white-space: nowrap;
	overflow: hidden;
}

.featured-item .title {
	font-size: 24pt;
}

.daily-item .title {
	font-size: 18pt;
}

@media (max-width: 500px) {
	.featured-item .title, .daily-item .title {
		font-size: 14pt;
	}
}

.featured-item .price:before, .daily-item .price:before {
	content: ' ';
	display: inline-block;
	width: 32px;
	height: 32px;
	background-image: url("/vbucks.png");
	background-repeat: no-repeat;
	background-size: cover;
}

.featured-item .price, .daily-item .price {
	font-family: 'Luckiest Guy', sans-serif;
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	height: 32px;
	text-align: center;
	color: #ffffff;
	font-size: 12pt;
}

.daily-item {
	display: block;
	overflow: hidden;
	position: relative;
	min-height: 256px;
	min-width: 128px;
}

.daily-image {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	background-position: center;
	background-repeat: no-repeat;
}

.Common {
	background: radial-gradient(circle at center, #bebebe 5%, #646464 200%);
}

.Uncommon {
	background: radial-gradient(circle at center, #60aa3a 5%, #175117 200%);
}

.Rare {
	background: radial-gradient(circle at center, #49acf2 5%, #143977 200%);
}

.Epic {
	background: radial-gradient(circle at center, #b15be2 5%, #4b2483 200%);
}

.Legendary {
	background: radial-gradient(circle at center, #d37841 5%, #78371d 200%);
}

.link-list {
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-align: center;
}

.link-list li {
    display: inline-block;
    width: 400px;
}

@media (max-width: 800px) {
    .link-list li {
        width: 45%;
    }
}

a {
    color: #eef;
}

a:visited {
    color: #eff;
}

h1 {
    text-align: center;
}

.c-item {
	position: absolute;
	left: 0;
	top: 0;
	bottom: 0;
	right: 0;
}

.c-active {
	animation-duration: 0.5s;
	animation-name: slideleft;
}

.c-next {
	animation-duration: 0.5s;
	animation-name: slideright;
}

.c-inactive {
	display: none;
}

.c-active {
	transform: translateX(-100%);
}

@keyframes slideleft {
	from {
		transform: translateX(0%);
	}

	to {
		transform: translateX(-100%);
	}
}

@keyframes slideright {
	from {
		transform: translateX(100%);
	}

	to {
		transform: translateX(0%);
	}
}

